# hashira

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml
.github/workflows/: ci.yml  rust.yml
adapters/hashira-actix-web/: Cargo.toml
adapters/hashira-actix-web/src/: core.rs  lib.rs
adapters/hashira-axum/: Cargo.toml
adapters/hashira-axum/src/: core.rs  lib.rs
adapters/hashira-rocket/: Cargo.toml
adapters/hashira-rocket/src/: core.rs  lib.rs
adapters/hashira-tide/: Cargo.toml
adapters/hashira-tide/src/: core.rs  lib.rs
adapters/hashira-warp/: Cargo.toml
adapters/hashira-warp/src/: core.rs  lib.rs
adapters/hashira-wasm/: Cargo.toml
adapters/hashira-wasm/src/: core.rs
examples/: README.md
examples/counter-dark-theme/: Cargo.toml  README.md
examples/counter-dark-theme/src/: lib.rs  server.rs
examples/counter-dark-theme/src/components/: mod.rs  root_layout.rs  theme_toggle.rs
examples/counter-dark-theme/src/pages/: counter_page.rs  home_page.rs  mod.rs
examples/counter_dark_theme/: Cargo.toml
examples/counter_dark_theme/src/: lib.rs
examples/counter_dark_theme/src/components/: mod.rs  theme_toggle.rs
examples/ecommerce-crud/: Cargo.toml  package-lock.json  package.json  tailwind.config.ts
examples/ecommerce-crud/src/: lib.rs  main.rs  server.rs
examples/ecommerce-crud/src/components/: header.rs  mod.rs  root.rs  text.rs
examples/ecommerce-crud/src/models/: mod.rs
examples/ecommerce-crud/src/pages/: mod.rs
examples/ecommerce-crud/src/pages/auth/: mod.rs
examples/ecommerce-crud/src/pages/orders/: mod.rs
examples/ecommerce-crud/src/pages/products/: mod.rs
examples/ecommerce-crud/src/pages/users/: mod.rs
examples/hello/: Cargo.toml  REAME.md
examples/hello/src/: app.rs  lib.rs  main.rs  server.rs
examples/multipart-upload/: Cargo.toml  REAME.md  global.css
examples/multipart-upload/src/: app.rs  lib.rs  server.rs
examples/multipart-upload/src/components/: mod.rs  upload_input.rs
examples/sample/: Cargo.toml  Makefile.toml  README.md
examples/sample/src/: app.rs  index.ts  lib.rs
examples/server-actions/: Cargo.toml  REAME.md
examples/server-actions/src/: app.rs  lib.rs  server.rs
examples/todo-app/: .env.sample  .gitignore  Cargo.toml  REAME.md
examples/todo-app-sqlite/: .env.sample  .gitignore  Cargo.toml  REAME.md  package-lock.json  package.json  tailwind.config.ts
examples/todo-app-sqlite/migrations/: 20230506060210_initial.sql
examples/todo-app-sqlite/src/: lib.rs  main.rs  server.rs
examples/todo-app-sqlite/src/components/: nav_bar.rs
examples/todo-app-sqlite/src/pages/: mod.rs
examples/todo-app/migrations/: initial.sql
examples/todo-app/src/: lib.rs  server.rs
examples/todo-app/src/components/: mod.rs
examples/todo-app/src/database/: mod.rs
examples/todo-app/src/models/: mod.rs
examples/todo-app/src/pages/: add_todo.rs  create_todo.rs  edit_todo.rs  list_todos.rs  mod.rs  update_todo.rs  view_todo.rs
examples/with-tailwind/: Cargo.toml  README.md
examples/with-tailwind/src/: lib.rs  main.rs  server.rs
samples/actix_web_sample/: Cargo.toml  Makefile.toml  index.html
samples/actix_web_sample/src/: app.rs  client.rs  components.rs  index.rs  lib.rs  main.rs  server.rs
samples/counter_dark_theme/: Cargo.toml  global.scss
samples/counter_dark_theme/src/: lib.rs  main.rs  server.rs
samples/counter_dark_theme/src/components/: hashira_logo.rs  mod.rs  root.rs  theme_toggle.rs
samples/counter_dark_theme/src/pages/: home_page.rs
samples/counter_dark_theme/styles/: global.css
templates/: README.md
templates/hashira-with-actix-web/: Cargo.toml
templates/hashira-with-actix-web/src/: lib.rs  main.rs  server.rs
templates/hashira-with-actix-web/src/components/: hashira_x_actix_web.rs  mod.rs  root.rs  theme_toggle.rs
templates/hashira-with-actix-web/styles/: animations.css  global.css
templates/with-actix-web/: Cargo.toml  REAME.md  cargo-generate.toml
templates/with-actix-web/src/: app.rs  lib.rs  main.rs  server.rs
templates/with-actix-web/src/components/: root.rs
templates/with-axum/: Cargo.toml  cargo-generate.toml
templates/with-axum/src/: app.rs  lib.rs  main.rs  server.rs
templates/with-deno/: Cargo.toml  Makefile.toml  README.md  cargo-generate.toml
templates/with-deno/public/: with_deno.js  with_deno_bg.wasm
templates/with-deno/src/: app.rs  index.ts  lib.rs  server.rs
templates/with-deno/src/components/: counter.rs  mod.rs  root.rs
templates/with-deno/styles/: global.css
templates/with-deno/tests/: mod.rs
templates/with-rocket/: Cargo.toml  REAME.md  cargo-generate.toml  global.css
templates/with-rocket/src/: app.rs  lib.rs  main.rs  server.rs
templates/with-tide/: Cargo.toml  REAME.md  cargo-generate.toml
templates/with-tide/src/: app.rs  server.rs
templates/with-warp/: Cargo.toml  REAME.md  global.css
templates/with-warp/src/: app.rs  main.rs  server.rs
tests/hooks_tests/: Cargo.toml
tests/hooks_tests/src/: lib.rs  on_before_render_tests.rs  on_chunk_render.rs  on_handle_tests.rs  on_server_error.rs  on_server_init_test.rs  utils.rs
