[package]
name = "hashira-actix-web"
description = "Actix-web adapter for hashira"
version = "0.0.2-alpha"
edition = "2021"
repository = "https://github.com/Neo-Ciber94/hashira"
license = "MIT"
readme = "../../README.md"
keywords = ["yew", "ssr", "actix-web"]

[dependencies]
hashira = { path = "../../packages/hashira", version = "0.0.2-alpha" }
actix-web = "4.3.1"
futures = "0.3.28"
actix-files = "0.6.2"
log = "0.4.17"
