[package]
name = "hashira-axum"
description = "Axum adapter for hashira"
version = "0.0.2-alpha"
edition = "2021"
repository = "https://github.com/Neo-Ciber94/hashira"
license = "MIT"
readme = "../../README.md"
keywords = ["yew", "ssr", "axum"]

[dependencies]
hashira = { path = "../../packages/hashira" }
axum = "0.6.15"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["stream"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tower = "0.4.13"
