[package]
name = "hashira-rocket"
description = "Rocket adapter for hashira"
version = "0.0.1-alpha"
edition = "2021"
repository = "https://github.com/Neo-Ciber94/hashira"
license = "MIT"
readme = "../../README.md"
keywords = ["yew", "ssr", "rocket"]

[dependencies]
hashira = { path = "../../packages/hashira", version = "0.0.1-alpha" }
rocket = "0.5.0-rc.3"
tokio-util = { version = "0.7.7", features = ["io"] }
