[package]
name = "hashira-tide"
description = "Tide adapter for hashira"
version = "0.0.2-alpha"
edition = "2021"
repository = "https://github.com/Neo-Ciber94/hashira"
license = "MIT"
readme = "../../README.md"
keywords = ["yew", "ssr", "tide"]

[dependencies]
hashira = { path = "../../packages/hashira", version = "0.0.2-alpha", features = ["internal"] }
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.28"
