[package]
name = "hashira-warp"
description = "Warp adapter for hashira"
version = "0.0.1-alpha"
edition = "2021"
repository = "https://github.com/Neo-Ciber94/hashira"
license = "MIT"
readme = "../../README.md"
keywords = ["yew", "ssr", "warp"]

[dependencies]
hashira = { path = "../../packages/hashira", version = "0.0.1-alpha" }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
