[package]
name = "ecommerce_crud_server"
version = "0.1.0"
edition = "2021"
authors = ["Freddy L. <neo-ciber_94@hotmail.com>"]

[lib]
name = "ecommerce_crud"
crate-type = ["cdylib", "rlib"]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true
opt-level = 's'

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hashira-axum = { path = "../../packages/adapters/hashira-axum", version = "0.0.1-alpha" }
env_logger = "0.10.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
axum = "0.6.15"
tower-http = { version = "0.4.0", features = ["fs"] }

[dependencies]
yew = "0.20"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
uuid = { version = "1.3.2", features = ["serde"] }
rust_decimal = { version = "1.29.1", features = ["serde"] }
time = { version = "0.3.20", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.hashira]
version = "0.0.1-alpha"
path = "../../packages/hashira"
features = ["client"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.hashira]
version = "0.0.1-alpha"
path = "../../packages/hashira"
features = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.sqlx]
version = "0.6.3"
features = ["sqlite", "time", "runtime-tokio-rustls"]
