[package]
name = "multipart_upload_server"
description = "A photo gallery to upload photos to the server"
version = "0.1.0"
edition = "2021"
authors = ["Freddy L. <neo-ciber_94@hotmail.com>"]

[lib]
name = "multipart_upload"
crate-type = ["cdylib", "rlib"]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true
opt-level = 's'

[target.'cfg(target_arch = "wasm32")'.dependencies]
hashira = { path = "../../packages/hashira", features = ["client"] }
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hashira = { path = "../../packages/hashira", features = [] }
hashira-rocket = { path = "../../adapters/hashira-rocket" }
hashira-axum = { path = "../../adapters/hashira-axum" }
rocket = "0.5.0-rc.3"
env_logger = "0.10.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

[dependencies]
yew = "0.20"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
multer-derive = "0.1.1-alpha"
cfg-if = "1.0.0"
web-sys = { version = "0.3.62", features = ["Window", "Location"] }

[features]
client = []
