[package]
name = "server_actions_server"
description = "Example about calling functions on the server"
version = "0.1.0"
edition = "2021"
authors = [ "Freddy L. <neo-ciber_94@hotmail.com>" ]

[lib]
name = "server_actions"
crate-type = ["cdylib", "rlib"]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true
opt-level= 's'

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hashira-warp = "0.0.2-alpha"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "time"] }
env_logger = "0.10.0"
warp = "0.3"

[dependencies]
hashira = { path = "../../packages/hashira", optional = true }
tokio = { version = "1.27.0", features = ["macros"]}
yew = "0.20"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"

[features]
default = ["hashira"]
client = ["hashira/client"]
