[package]
name = "todo_app_sqlite_server"
description = "A todo example using sqlx and sqlite"
version = "0.1.0"
edition = "2021"
authors = ["Freddy L. <neo-ciber_94@hotmail.com>"]

[lib]
name = "todo_app_sqlite"
crate-type = ["cdylib", "rlib"]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true
opt-level = 's'

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hashira-axum = { path = "../../packages/adapters/hashira-axum", version = "0.0.1-alpha" }
env_logger = "0.10.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "time"] }
axum = "0.6.15"
tower-http = { version = "0.4.0", features = ["fs"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }

[dependencies]
hashira = { path = "../../packages/hashira", version = "0.0.1-alpha", optional = true }
yew = "0.20"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["HtmlInputElement", "HtmlTextAreaElement"] }

[features]
default = ["hashira"]
client = ["hashira/client"]
