[package]
name = "actix-web-sample"
version = "0.1.0"
edition = "2021"

[lib]
name = "actix_web_sample_web"
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.20"
log = "0.4.17"
hashira = { path = "../../packages/hashira" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
actix-web = "4.3.1"
actix-files = "0.6.2"
hashira_actix_web = { path = "../../packages/hashira_actix_web" }
tokio = { version = "1.27.0", features = ["macros"] }