[package]
name = "counter-dark-theme"
version = "0.1.0"
edition = "2021"

[lib]
name = "counter_dark_theme_web"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
hashira = { path = "../../packages/hashira",  features = ["hooks", "client"] }
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hashira = { path = "../../packages/hashira", features = ["hooks"]}
env_logger = "0.10.0"
actix-web = "4.3.1"
actix-files = "0.6.2"
hashira-actix-web = { path = "../../packages/hashira-actix-web" }
tokio = { version = "1.27.0", features = ["macros"] }

[dependencies]
yew = "0.20"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
