[package]
name = "with-rocket"
version = "0.1.0"
edition = "2021"

[lib]
name = "with_rocket_client"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
hashira = { path = "../../packages/hashira", features = ["client"] }
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hashira = { path = "../../packages/hashira", features = [] }
rocket = "0.5.0-rc.3"
env_logger = "0.10.0"
hashira-rocket = { path = "../../packages/hashira-rocket" }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

[dependencies]
yew = "0.20"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
