[package]
name = "{{crate_name}}_server"
version = "0.1.0"
edition = "2021"
authors = [ "{{authors}}" ]

[lib]
name = "{{crate_name}}"
crate-type = ["cdylib", "rlib"]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true
opt-level= 's'

[target.'cfg(target_arch = "wasm32")'.dependencies]
hashira = { version = "0.0.1-alpha", features = ["client"] }
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hashira = { version = "0.0.1-alpha", features = [] }
hashira-rocket = { version = "0.0.1-alpha" }
rocket = "0.5.0-rc.3"
env_logger = "0.10.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

[dependencies]
yew = "0.20"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
