[package]
name = "{{crate_name}}_server"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

[lib]
name = "{{crate_name}}"
crate-type = ["cdylib", "rlib"]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true
opt-level = 's'

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
{% if use_local -%}
hashira-tide = { path = "../../adapters/hashira-tide" }
{% else -%}
hashira-tide = { version = "0.0.2-alpha" }
{% endif -%}
env_logger = "0.10.0"
tide = "0.16.0"
tokio = { version = "1", features = ["full"] }

[dependencies]
{% if use_local -%}
hashira = { path = "../../packages/hashira", optional = true }
{% else -%}
hashira = { version = "0.0.2-alpha", optional = true }
{% endif -%}
yew = "0.20"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"

[features]
default = ["hashira"]
client = ["hashira/client"]
