[package]
name = "with_warp_server"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

[lib]
name = "with_warp"
crate-type = ["cdylib", "rlib"]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true
opt-level = 's'

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hashira-warp = { path = "../../adapters/hashira-warp" }
env_logger = "0.10.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }

[dependencies]
hashira = { path = "../../packages/hashira", optional = true }
yew = "0.20"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"

[features]
default = ["hashira"]
client = ["hashira/client"]
