[package]
name = "hooks_tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
yew = { version = "0.20.0" }
hashira = { path = "../../packages/hashira", features = ["hooks"] }
hashira-axum = { path = "../../packages/adapters/hashira-axum" }
axum = "0.6.17"
portpicker = "0.1.1"
tokio = { version = "1.27.0", features = ["macros", "rt"] }
reqwest = "0.11.17"
